fix(calendar): align day and more indicator inline in narrow desktop viewports

--- a/src/routes/Calendar/Table/Cell/Cell.less
+++ b/src/routes/Calendar/Table/Cell/Cell.less
@@ -28,7 +28,7 @@
 
     .heading {
         position: relative;
-        width: 60%;
+        width: 100%;
         display: flex;
         align-items: start;
         padding: 0;
@@ -52,7 +52,7 @@
         position: relative;
         display: flex;
         flex-direction: row;
-        gap: 1rem;
+        gap: 0.1em;
         padding: 0.1rem;
         width: 90%;
 
@@ -80,13 +80,10 @@
             }
 
             .poster {
-                flex: auto;
-                z-index: 0;
-                position: relative;
-                height: 100%;
-                width: 100%;
+                height: auto;
+                max-height: 100%;
+                aspect-ratio: 2 / 3;
                 object-fit: cover;
-                opacity: 1;
             }
 
             .icon, .poster {
@@ -134,27 +131,19 @@
     }
 }
 
-@media only screen and (orientation: portrait) {
+@media @phone-portrait {
     .cell {
         flex-direction: column;
         display: grid;
-        .heading {
-            justify-content: center;
-        }
 
         .items {
-          padding: 1px;
-          gap: 0.15rem;
-          justify-content: space-evenly;
+            padding: 1px;
+            gap: 0.15rem;
+            justify-content: space-evenly;
 
-          .item{
-            width: 80%;
-          }
-        }
-
-        .more {
-            display: flex;
-            display: none;
+            .item {
+                width: 80%;
+            }
         }
     }
 }
@@ -180,4 +169,36 @@
             }
         }
     }
+}
+
+@media only screen and (max-width: @minimum) and (orientation: portrait) and (pointer: fine) {
+  .cell {
+      position: relative;
+      flex-direction: row;
+      align-items: center;
+      display: flex;
+
+      .items {
+          display: none;
+      }
+
+      .heading {
+          display: flex;
+          align-items: center;
+          gap: 0.25rem;
+          width: auto; 
+      }
+
+      .day {
+          margin-right: 0.25rem;
+      }
+
+      .more {
+          display: inline-flex;
+          position: relative;
+          height: auto;
+          padding: 0;
+          width: 30%;
+      }
+  }
 }
